# absolute-bert

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  benchmark-BM25.ipynb  benchmark-abs_bert.ipynb  benchmark-bert.ipynb  benchmark-glove.ipynb  benchmark-rotator.ipynb  benckmark-sbert.ipynb  hippo.ipynb  inspect-model_directions.ipynb  inspect-predicting.ipynb  inspect-umap-bert.ipynb  inspect-umap.ipynb  inspect-visualizing.ipynb  inspect-words_of_direction.ipynb  inspecting-predicting.ipynb  pyproject.toml  requirements.txt  sweep.ipynb  sweep.py  trace_module.sh  trace_module_record.txt  train-abs_bert-best_train.ipynb  train-abs_bert-newest.ipynb  train-abs_bert.ipynb  train-bert.ipynb  train-newest.ipynb  train-rnn.ipynb  train_abs_bert-newest.ipynb  train_bert-5.ipynb  train_newest.ipynb  umap.ipynb  visualizing.ipynb
absolute_bert/: absolute_bert.py  absolute_bert_multi_granularity.py  base_types.py  distances.py  formatter.py  load_corpus.py  sweep.py  tracker.py  utils.py
absolute_bert/bi_encoder/: __init__.py  bases.py  encoder_methods.py  factory.py
absolute_bert/extractor/: __init__.py  _module_name_resolver.py  concept_extractor.py  data_types.py  extractor_types.py  module_stat_extractor.py  semantic_extractor.py
absolute_bert/formatter/: metric.py  semantic.py
absolute_bert/loggers/: __init__.py  wandb.py
absolute_bert/loss/: __init__.py  cross_entropy.py  loss_types.py  mse.py  registry.py  triplet.py
absolute_bert/losses/: __init__.py  cross_entropy.py  multiplet.py
absolute_bert/model/: __init__.py  _auto_import.py  mlm_losses.py  registry.py
absolute_bert/model/absolute_bert/: __init__.py  concept_extractor.py  config.py  models.py  summary_generator.py
absolute_bert/model/model_registry/: absolute_bert.yaml
absolute_bert/model/roformer/: __init__.py  config.py  model.py  models.py
absolute_bert/model/rotator/: rotator.py  rotator_by_accumlating.py  rotator_lima4.py  rotator_lima7.py  rotator_reslima_accum_diff.py  rotator_reslima_tunable_lima_halfshape.py
absolute_bert/model/rotator/model_registry/: rotator.yaml
absolute_bert/models/absolute_bert/: config.py  models.py
absolute_bert/models/model_registry/: rotator.yaml
absolute_bert/rotator/: rotator_lima4_noClocks.py  rotator_lima5.py  rotator_lima6.py  rotator_lima7_gru_randInit.py  rotator_multihead_reslima.py  rotator_res_lima.py  rotator_with_time.py
absolute_bert/sweep/: config.py  extractors.py  optimizer.py  scheduler.py  setup.py  setup_env.py  sweep.py  utils.py
absolute_bert/sweep/evaluate/: __init__.py  benchmarks.py  formatters.py
configs/: default.yaml  reformer.yaml
dockerfiles/: base_env.dockerfile  sweep_run.dockerfile
model/: absolute_bert.py  absolute_bert_add_and_LN.py  absolute_bert_fix_negative.py  absolute_bert_multi_granularity.py  absolute_bert_sigmoid.py  absolute_bert_sum.py  absolute_bert_whole_expBias.py  rotator_lima3.py  rotator_lima3_5.py  rotator_lima4_hippo.py  rotator_lima4_multihippo.py  rotator_lima5.py  rotator_lima8.py  rotator_lima8_perToken.py  rotator_res_lima2.py
model/rotator/: rotator_lima4_5.py  rotator_lima5_nohippo.py  rotator_lima6_randnInit.py  rotator_lima7_gru_mixInit.py
notebooks/: benchmark-BM25.ipynb  benchmark-abs_bert.ipynb  benchmark-glove.ipynb  benchmark-rotator.ipynb  benchmark-sbert.ipynb  colab-sweep.ipynb  inspect-words_of_direction.ipynb  test.ipynb  train-abs_bert.ipynb
scripts/: build_sweep_run.sh  sweep_run-entrypoint.sh  sweep_run-pull_and_run.sh  test_sweep_setup.py
sweep/: README.md  sweep.py  sweep.yaml
tools/model_registry/: __init__.py  check_registries_statuses.py  register_model.py  utils.py
utils/: RNN.py  benchmark.py  distances.py  inspecting.py  load_corpus.py  logging.py  losses.py  markdown.py  preprocessor.py  train.py
utils/evaluate/: __init__.py  benchmarks.py  bi_encoder_methods.py
zones/: zones
zones/zone_0/absolute_bert/: notes  registered_sites  v_1  v_10  v_11  v_12  v_3  v_5  v_8  versions
zones/zone_1/rotator/: registered_sites  v_14  v_15  v_21  v_25  v_8  v_9  versions
