[tool.poetry]
name = "absolute_bert"
version = "0.1.0"
authors = ["Adam Wen"]
description = "A PyTorch-based module with optional benchmarking tools"
readme = "README.md"
packages = [{ include = "absolute_bert" }]

[tool.poetry.dependencies]
python = "^3.11"
beir = { version = "^1.0.0", optional = true }
faiss-cpu = { version = "*", optional = true }
tqdm = { version = "*", optional = true }
numpy = "<2.0"
jaxtyping = "^0.3.3"
transformers = "^4.57.1"
datasets = "^4.3.0"
nltk = "^3.9.2"
omegaconf = "^2.3.0"
dacite = "^1.9.2"
torch = { version = ">=2.4,<2.6", optional = true }

[tool.poetry.extras]
gpu = ["torch"]
benchmark = ["beir", "faiss-cpu", "tqdm"]

[tool.poetry.scripts]
test-sweep-setup = "scripts.test_sweep_setup:main"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
mypy = "^1.9"
ruff = "^0.14.3"
pytest = "^8.0"
wandb = "^0.16"
pre-commit = "^4.2.0"
toml = "^0.10.2"




[[tool.poetry.source]]
# work on 3080
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C90", "S"]
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
"absolute_bert/model/*.py" = ["F722", "F821", "UP037"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.relic]
zones = ["absolute_bert/model"]
# default_station = "model_registry"
# default_depth = 0
debug = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
